--- a/lab-python-data-structures.ipynb
+++ b/lab-python-data-structures.ipynb
@@ -50,6 +50,148 @@
     "\n",
     "Solve the exercise by implementing the steps using the Python concepts of lists, dictionaries, sets, and basic input/output operations. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "products = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inventory = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How many of the following product do we have in stock: t-shirt? 4\n",
+      "How many of the following product do we have in stock: mug? 3\n",
+      "How many of the following product do we have in stock: hat? 5\n",
+      "How many of the following product do we have in stock: book? 6\n",
+      "How many of the following product do we have in stock: keychain? 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'t-shirt': '4', 'mug': '3', 'hat': '5', 'book': '6', 'keychain': '4'}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for prod in products:\n",
+    "    inventory[prod] = input('How many of the following product do we have in stock: ' + prod + '?')\n",
+    "\n",
+    "inventory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customer_orders = set()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Does the customer want to buy the following item? t-shirt yes\n",
+      "Does the customer want to buy the following item? mug yes\n",
+      "Does the customer want to buy the following item? hat yes\n",
+      "Does the customer want to buy the following item? book no\n",
+      "Does the customer want to buy the following item? keychain no\n"
+     ]
+    }
+   ],
+   "source": [
+    "for prod in products:\n",
+    "    order = input('Does the customer want to buy the following item? ' + prod)\n",
+    "    if order == 'yes':\n",
+    "        customer_orders.add(prod)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'hat', 'mug', 't-shirt'}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customer_orders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_products_ordered = str(len(customer_orders))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "order_status = str(len(customer_orders) / len(inventory) * 100)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Order Statistics:\n",
+      "Total Products Ordered: 3\n",
+      "Percentage of Products Ordered: 60.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Order Statistics:\\nTotal Products Ordered: ' + total_products_ordered + '\\nPercentage of Products Ordered: ' + order_status + '%')"
+   ]
   }
  ],
  "metadata": {
@@ -68,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
